import React from 'react';
import configureStore from 'redux-mock-store';
import thunk from 'redux-thunk';
import { screen, fireEvent } from '@testing-library/react';
import { RpcEndpointType } from '@metamask/network-controller';
import { CHAIN_IDS } from '@metamask/transaction-controller';
import { renderWithProvider } from '../../../../../test/lib/render-helpers-navigate';
import mockState from '../../../../../test/data/mock-send-state.json';
import { NETWORK_TO_SHORT_NETWORK_NAME_MAP } from '../../../../../shared/constants/bridge';
import { enLocale as messages } from '../../../../../test/lib/i18n-helpers';
import { AssetPickerModalNetwork } from './asset-picker-modal-network';

const mockOnClose = jest.fn();
const mockOnNetworkChange = jest.fn();
const mockOnBack = jest.fn();

const getNetworkDisplayName = (network: { chainId: string; name: string }) =>
  NETWORK_TO_SHORT_NETWORK_NAME_MAP[
    network.chainId as keyof typeof NETWORK_TO_SHORT_NETWORK_NAME_MAP
  ] ?? network.name;

describe('AssetPickerModalNetwork', () => {
  const mockStore = configureStore([thunk]);
  const store = mockStore(mockState);

  const defaultProps = {
    isOpen: true,
    onClose: mockOnClose,
    onBack: mockOnBack,
    network: undefined,
    networks: [],
    onNetworkChange: mockOnNetworkChange,
  };

  const networkProps = {
    network: {
      chainId: CHAIN_IDS.MAINNET,
      nativeCurrency: 'ETH',
      defaultBlockExplorerUrlIndex: 0,
      blockExplorerUrls: ['https://explorerurl'],
      defaultRpcEndpointIndex: 0,
      rpcEndpoints: [
        {
          networkClientId: 'test1',
          url: 'https://rpcurl',
          type: RpcEndpointType.Custom,
        },
      ],
      name: 'network',

      // TODO: Fix in https://github.com/MetaMask/metamask-extension/issues/31973
      // eslint-disable-next-line @typescript-eslint/no-explicit-any
    } as any,
    networks: [
      {
        chainId: CHAIN_IDS.MAINNET,
        nativeCurrency: 'ETH',
        defaultBlockExplorerUrlIndex: 0,
        blockExplorerUrls: ['https://explorerurl'],
        defaultRpcEndpointIndex: 0,
        rpcEndpoints: [
          {
            networkClientId: 'test1',
            url: 'https://rpcurl',
            type: RpcEndpointType.Custom,
          },
        ],
        name: 'Network name 3',
      },
      {
        chainId: CHAIN_IDS.OPTIMISM,
        nativeCurrency: 'ETH',
        defaultBlockExplorerUrlIndex: 0,
        blockExplorerUrls: ['https://explorerurl'],
        defaultRpcEndpointIndex: 0,
        rpcEndpoints: [
          {
            networkClientId: 'test2',
            url: 'https://rpcurl',
            type: RpcEndpointType.Custom,
          },
        ],
        name: 'Network name 4',
      },

      // TODO: Fix in https://github.com/MetaMask/metamask-extension/issues/31973
      // eslint-disable-next-line @typescript-eslint/no-explicit-any
    ] as any,
  };

  afterEach(() => {
    jest.clearAllMocks();
  });

  it('should not show selected network when network prop is not passed in', () => {
    renderWithProvider(
      <AssetPickerModalNetwork
        {...defaultProps}
        networks={networkProps.networks}
      />,
      store,
    );
  });

  it('should use passed in network as default when network prop is passed in', () => {
    renderWithProvider(
      <AssetPickerModalNetwork {...defaultProps} {...networkProps} />,
      store,
    );
  });

  it('should call onClose and onBack when header buttons are clicked', () => {
    renderWithProvider(
      <AssetPickerModalNetwork {...defaultProps} {...networkProps} />,
      store,
    );

    fireEvent.click(screen.getByLabelText(messages.close.message));
    expect(mockOnClose).toHaveBeenCalledTimes(1);

    fireEvent.click(screen.getByLabelText(messages.back.message));
    expect(mockOnBack).toHaveBeenCalledTimes(1);
  });

  it('should call onBack and onClickHandler when network is selected', () => {
    renderWithProvider(
      <AssetPickerModalNetwork {...defaultProps} {...networkProps} />,
      store,
    );

    const [mainnetNetwork] = networkProps.networks;
    fireEvent.click(screen.getByText(getNetworkDisplayName(mainnetNetwork)));
    expect(mockOnBack).toHaveBeenCalledTimes(1);
    expect(mockOnNetworkChange).toHaveBeenCalledTimes(1);
  });
});
