// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AssetPickerModalNetwork renders modal with no network list by default 1`] = `
<body>
  <div
    id="popover-content"
  />
  <div />
  <div
    class="multichain-asset-picker__network-modal"
  >
    <div
      aria-hidden="true"
      class="bg-overlay-default fixed inset-0 z-[1050] motion-safe:animate-fade-in"
    />
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="0"
    />
    <div
      data-focus-lock-disabled="false"
    >
      <div
        class="fixed inset-0 z-[1050] flex items-start justify-center sm:py-8 md:py-12 [@media(max-height:475px)]:p-2 p-0"
      >
        <section
          aria-modal="true"
          class="flex-col items-stretch justify-start p-0 pt-4 pb-4 border border-alternative bg-elevated1 flex max-h-full w-full rounded-lg shadow-lg motion-safe:animate-slide-up max-w-[360px] h-full"
          role="dialog"
        >
          <header
            class="grid grid-cols-[1fr_auto_1fr] items-center px-4 pb-4"
          >
            <div
              class="col-start-2 col-end-3 w-full"
            >
              <h4
                class="text-default text-s-heading-sm leading-s-heading-sm tracking-s-heading-sm md:text-l-heading-sm md:leading-l-heading-sm md:tracking-l-heading-sm font-bold font-default text-center"
              >
                Select network
              </h4>
            </div>
            <div
              class="col-start-3 justify-self-end"
            >
              <button
                aria-label="Close"
                class="inline-flex items-center justify-center p-0 h-8 w-8 rounded-lg bg-transparent hover:bg-hover active:bg-pressed text-icon-default"
              >
                <svg
                  class="inline-block w-6 h-6 text-inherit"
                  fill="currentColor"
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M6.4 19 5 17.6l5.6-5.6L5 6.4 6.4 5l5.6 5.6L17.6 5 19 6.4 13.4 12l5.6 5.6-1.4 1.4-5.6-5.6z"
                  />
                </svg>
              </button>
            </div>
          </header>
          <div
            class="relative max-h-full multichain-asset-picker__network-list min-h-0 flex-1 overflow-auto px-0"
            tabindex="0"
          />
        </section>
      </div>
    </div>
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="0"
    />
  </div>
</body>
`;

exports[`AssetPickerModalNetwork should not show selected network when network prop is not passed in 1`] = `
<body>
  <div
    id="popover-content"
  />
  <div />
  <div
    class="multichain-asset-picker__network-modal"
  >
    <div
      aria-hidden="true"
      class="bg-overlay-default fixed inset-0 z-[1050] motion-safe:animate-fade-in"
    />
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="0"
    />
    <div
      data-focus-lock-disabled="false"
    >
      <div
        class="fixed inset-0 z-[1050] flex items-start justify-center sm:py-8 md:py-12 [@media(max-height:475px)]:p-2 p-0"
      >
        <section
          aria-modal="true"
          class="flex-col items-stretch justify-start p-0 pt-4 pb-4 border border-alternative bg-elevated1 flex max-h-full w-full rounded-lg shadow-lg motion-safe:animate-slide-up max-w-[360px] h-full"
          role="dialog"
        >
          <header
            class="grid grid-cols-[1fr_auto_1fr] items-center px-4 pb-4"
          >
            <div
              class="col-start-2 col-end-3 w-full"
            >
              <h4
                class="text-default text-s-heading-sm leading-s-heading-sm tracking-s-heading-sm md:text-l-heading-sm md:leading-l-heading-sm md:tracking-l-heading-sm font-bold font-default text-center"
              >
                Select network
              </h4>
            </div>
            <div
              class="col-start-3 justify-self-end"
            >
              <button
                aria-label="Close"
                class="inline-flex items-center justify-center p-0 h-8 w-8 rounded-lg bg-transparent hover:bg-hover active:bg-pressed text-icon-default"
              >
                <svg
                  class="inline-block w-6 h-6 text-inherit"
                  fill="currentColor"
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M6.4 19 5 17.6l5.6-5.6L5 6.4 6.4 5l5.6 5.6L17.6 5 19 6.4 13.4 12l5.6 5.6-1.4 1.4-5.6-5.6z"
                  />
                </svg>
              </button>
            </div>
          </header>
          <div
            class="relative max-h-full multichain-asset-picker__network-list min-h-0 flex-1 overflow-auto px-0"
            tabindex="0"
          >
            <div
              class="mm-box flex flex-col mm-box--display-flex mm-box--flex-direction-column mm-box--width-full"
            >
              <p
                class="text-alternative text-s-body-md leading-s-body-md tracking-s-body-md md:text-l-body-md md:leading-l-body-md md:tracking-l-body-md font-medium font-default px-4 pb-2 pt-4"
              >
                Default networks
              </p>
              <div
                class="mm-box multichain-network-list-item multichain-network-list-item--deselected mm-box--padding-top-4 mm-box--padding-right-4 mm-box--padding-bottom-4 mm-box--padding-left-4 mm-box--display-flex mm-box--gap-4 mm-box--justify-content-space-between mm-box--align-items-center mm-box--width-full mm-box--background-color-transparent"
                data-testid="network-list-item-0x1"
              >
                <div
                  class="inline-flex shrink-0 items-center justify-center overflow-hidden bg-alternative h-6 w-6 rounded-md"
                >
                  <img
                    alt="Ethereum"
                    class="size-full object-contain"
                    src="./images/eth_logo.svg"
                  />
                </div>
                <div
                  class="mm-box mm-box--display-flex mm-box--flex-direction-column mm-box--justify-content-flex-start mm-box--align-items-flex-start mm-box--width-full"
                  style="overflow: hidden;"
                >
                  <div
                    class="mm-box mm-box--display-flex mm-box--gap-2 mm-box--flex-direction-row mm-box--align-items-center mm-box--width-full"
                    data-testid="Ethereum"
                  >
                    <div
                      class="multichain-network-list-item__tooltip"
                    >
                      <div
                        class=""
                        style="display: inline;"
                        tabindex="0"
                        title=""
                      >
                        <p
                          class="mm-box mm-text mm-text--body-md-medium mm-text--ellipsis mm-box--color-text-default mm-box--background-color-transparent"
                          tabindex="0"
                        >
                          Ethereum
                        </p>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="mm-box multichain-network-list-item multichain-network-list-item--deselected mm-box--padding-top-4 mm-box--padding-right-4 mm-box--padding-bottom-4 mm-box--padding-left-4 mm-box--display-flex mm-box--gap-4 mm-box--justify-content-space-between mm-box--align-items-center mm-box--width-full mm-box--background-color-transparent"
                data-testid="network-list-item-0xa"
              >
                <div
                  class="inline-flex shrink-0 items-center justify-center overflow-hidden bg-alternative h-6 w-6 rounded-md"
                >
                  <img
                    alt="OP"
                    class="size-full object-contain"
                    src="./images/optimism.svg"
                  />
                </div>
                <div
                  class="mm-box mm-box--display-flex mm-box--flex-direction-column mm-box--justify-content-flex-start mm-box--align-items-flex-start mm-box--width-full"
                  style="overflow: hidden;"
                >
                  <div
                    class="mm-box mm-box--display-flex mm-box--gap-2 mm-box--flex-direction-row mm-box--align-items-center mm-box--width-full"
                    data-testid="OP"
                  >
                    <div
                      class="multichain-network-list-item__tooltip"
                    >
                      <div
                        class=""
                        style="display: inline;"
                        tabindex="0"
                        title=""
                      >
                        <p
                          class="mm-box mm-text mm-text--body-md-medium mm-text--ellipsis mm-box--color-text-default mm-box--background-color-transparent"
                          tabindex="0"
                        >
                          OP
                        </p>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </section>
      </div>
    </div>
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="0"
    />
  </div>
</body>
`;

exports[`AssetPickerModalNetwork should use passed in network as default when network prop is passed in 1`] = `
<body>
  <div
    id="popover-content"
  />
  <div />
  <div
    class="multichain-asset-picker__network-modal"
  >
    <div
      aria-hidden="true"
      class="bg-overlay-default fixed inset-0 z-[1050] motion-safe:animate-fade-in"
    />
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="0"
    />
    <div
      data-focus-lock-disabled="false"
    >
      <div
        class="fixed inset-0 z-[1050] flex items-start justify-center sm:py-8 md:py-12 [@media(max-height:475px)]:p-2 p-0"
      >
        <section
          aria-modal="true"
          class="flex-col items-stretch justify-start p-0 pt-4 pb-4 border border-alternative bg-elevated1 flex max-h-full w-full rounded-lg shadow-lg motion-safe:animate-slide-up max-w-[360px] h-full"
          role="dialog"
        >
          <header
            class="grid grid-cols-[1fr_auto_1fr] items-center px-4 pb-4"
          >
            <div
              class="col-start-1 justify-self-start"
            >
              <button
                aria-label="Back"
                class="inline-flex items-center justify-center p-0 h-8 w-8 rounded-lg bg-transparent hover:bg-hover active:bg-pressed text-icon-default"
              >
                <svg
                  class="inline-block w-6 h-6 text-inherit"
                  fill="currentColor"
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="m15.112 21.886-10-10 10-10 1.775 1.775-8.225 8.224 8.225 8.226z"
                  />
                </svg>
              </button>
            </div>
            <div
              class="col-start-2 col-end-3 w-full"
            >
              <h4
                class="text-default text-s-heading-sm leading-s-heading-sm tracking-s-heading-sm md:text-l-heading-sm md:leading-l-heading-sm md:tracking-l-heading-sm font-bold font-default text-center"
              >
                Select network
              </h4>
            </div>
            <div
              class="col-start-3 justify-self-end"
            >
              <button
                aria-label="Close"
                class="inline-flex items-center justify-center p-0 h-8 w-8 rounded-lg bg-transparent hover:bg-hover active:bg-pressed text-icon-default"
              >
                <svg
                  class="inline-block w-6 h-6 text-inherit"
                  fill="currentColor"
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M6.4 19 5 17.6l5.6-5.6L5 6.4 6.4 5l5.6 5.6L17.6 5 19 6.4 13.4 12l5.6 5.6-1.4 1.4-5.6-5.6z"
                  />
                </svg>
              </button>
            </div>
          </header>
          <div
            class="relative max-h-full multichain-asset-picker__network-list min-h-0 flex-1 overflow-auto px-0"
            tabindex="0"
          >
            <div
              class="mm-box flex flex-col mm-box--display-flex mm-box--flex-direction-column mm-box--width-full"
            >
              <p
                class="text-alternative text-s-body-md leading-s-body-md tracking-s-body-md md:text-l-body-md md:leading-l-body-md md:tracking-l-body-md font-medium font-default px-4 pb-2 pt-4"
              >
                Default networks
              </p>
              <div
                class="mm-box multichain-network-list-item multichain-network-list-item--selected mm-box--padding-top-4 mm-box--padding-right-4 mm-box--padding-bottom-4 mm-box--padding-left-4 mm-box--display-flex mm-box--gap-4 mm-box--justify-content-space-between mm-box--align-items-center mm-box--width-full mm-box--background-color-background-muted"
                data-testid="network-list-item-0x1"
              >
                <div
                  class="inline-flex shrink-0 items-center justify-center overflow-hidden bg-alternative h-6 w-6 rounded-md"
                >
                  <img
                    alt="Ethereum"
                    class="size-full object-contain"
                    src="./images/eth_logo.svg"
                  />
                </div>
                <div
                  class="mm-box mm-box--display-flex mm-box--flex-direction-column mm-box--justify-content-flex-start mm-box--align-items-flex-start mm-box--width-full"
                  style="overflow: hidden;"
                >
                  <div
                    class="mm-box mm-box--display-flex mm-box--gap-2 mm-box--flex-direction-row mm-box--align-items-center mm-box--width-full"
                    data-testid="Ethereum"
                  >
                    <div
                      class="multichain-network-list-item__tooltip"
                    >
                      <div
                        class=""
                        style="display: inline;"
                        tabindex="0"
                        title=""
                      >
                        <p
                          class="mm-box mm-text mm-text--body-md-medium mm-text--ellipsis mm-box--color-text-default mm-box--background-color-transparent"
                          tabindex="0"
                        >
                          Ethereum
                        </p>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="mm-box multichain-network-list-item multichain-network-list-item--deselected mm-box--padding-top-4 mm-box--padding-right-4 mm-box--padding-bottom-4 mm-box--padding-left-4 mm-box--display-flex mm-box--gap-4 mm-box--justify-content-space-between mm-box--align-items-center mm-box--width-full mm-box--background-color-transparent"
                data-testid="network-list-item-0xa"
              >
                <div
                  class="inline-flex shrink-0 items-center justify-center overflow-hidden bg-alternative h-6 w-6 rounded-md"
                >
                  <img
                    alt="OP"
                    class="size-full object-contain"
                    src="./images/optimism.svg"
                  />
                </div>
                <div
                  class="mm-box mm-box--display-flex mm-box--flex-direction-column mm-box--justify-content-flex-start mm-box--align-items-flex-start mm-box--width-full"
                  style="overflow: hidden;"
                >
                  <div
                    class="mm-box mm-box--display-flex mm-box--gap-2 mm-box--flex-direction-row mm-box--align-items-center mm-box--width-full"
                    data-testid="OP"
                  >
                    <div
                      class="multichain-network-list-item__tooltip"
                    >
                      <div
                        class=""
                        style="display: inline;"
                        tabindex="0"
                        title=""
                      >
                        <p
                          class="mm-box mm-text mm-text--body-md-medium mm-text--ellipsis mm-box--color-text-default mm-box--background-color-transparent"
                          tabindex="0"
                        >
                          OP
                        </p>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </section>
      </div>
    </div>
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="0"
    />
  </div>
</body>
`;
